--- a/languages/wp-job-manager-es_ES.po
+++ b/languages/wp-job-manager-es_ES.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-10-21 17:40+0000\n"
-"Last-Translator: Edouard Scherer <escherer@stagesperou.com>\n"
+"PO-Revision-Date: 2014-10-30 23:39+0000\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/wp-job-manager/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
