--- a/languages/wp-job-manager-pl.po
+++ b/languages/wp-job-manager-pl.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-07-24 15:20+0000\n"
-"Last-Translator: michalkortas <michal@kortas.info>\n"
+"PO-Revision-Date: 2014-10-30 23:39+0000\n"
+"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
 "Language-Team: Polish (http://www.transifex.com/projects/p/wp-job-manager/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
