--- a/languages/wp-job-manager-da_DK.po
+++ b/languages/wp-job-manager-da_DK.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
 "POT-Creation-Date: 2015-01-24 13:48:39+00:00\n"
-"PO-Revision-Date: 2015-01-24 14:01+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2015-02-07 18:43+0000\n"
+"Last-Translator: Martin Hansen\n"
 "Language-Team: Danish (Denmark) (http://www.transifex.com/projects/p/wp-job-manager/language/da_DK/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -289,17 +289,17 @@ msgstr "Hvis aktiv, vil gæster kunne oprette en konto ved at skrive deres e-mai
 
 #: includes/admin/class-wp-job-manager-settings.php:116
 msgid "Username Generation"
-msgstr ""
+msgstr "Brugernavn generation"
 
 #: includes/admin/class-wp-job-manager-settings.php:117
 msgid "Automatically Generate Username from Email Address"
-msgstr ""
+msgstr "Automatisk generere brugernavn ud fra e-mail"
 
 #: includes/admin/class-wp-job-manager-settings.php:118
 msgid ""
 "If enabled, a username will be generated from the first part of the user "
 "email address. Otherwise, a username field will be shown."
-msgstr ""
+msgstr "Hvis aktiveret, vil brugernavnet blive oprettede ud fra den første del af brugerens e-mail adresse. Ellers vil et brugernavns felt blive vist"
 
 #: includes/admin/class-wp-job-manager-settings.php:125
 msgid "Account Role"
@@ -1060,11 +1060,11 @@ msgstr "Vis &rarr;"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:570
 msgid "Please enter a username."
-msgstr ""
+msgstr "Venligst indtast dit brugernavn"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:573
 msgid "Please enter your email address."
-msgstr ""
+msgstr "Venligst indtast din e-mail adresse "
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:591
 msgid "You must be signed in to post a new listing."
@@ -1108,7 +1108,7 @@ msgid ""
 "If you don&rsquo;t have an account you can %screate one below by entering "
 "your email address/username. A password will be automatically emailed to "
 "you."
-msgstr ""
+msgstr "Hvis du ikke har en konto kan du %soprette en nedenfor ved at indtaste din e-mail. Dit kodeord bliver så sendt til dig."
 
 #: templates/account-signin.php:28
 msgid "optionally"
@@ -1120,7 +1120,7 @@ msgstr "Du skal logge ind for at oprette en ny liste"
 
 #: templates/account-signin.php:40
 msgid "Username"
-msgstr ""
+msgstr "Brugernavn"
 
 #: templates/account-signin.php:40 templates/account-signin.php:47
 #: templates/job-submit.php:24 templates/job-submit.php:41
@@ -1137,11 +1137,11 @@ msgstr "%s siden"
 
 #: templates/content-no-jobs-found.php:2
 msgid "There are no listings matching your search."
-msgstr ""
+msgstr "Der er ingen stillinger der passer til din søgning"
 
 #: templates/content-no-jobs-found.php:4
 msgid "There are currently no vacancies."
-msgstr ""
+msgstr "Der er i øjeblikket ingen ledig stilling"
 
 #: templates/content-single-job_listing-meta.php:19
 #: templates/content-summary-job_listing.php:14
@@ -1281,7 +1281,7 @@ msgstr "RSS"
 
 #: wp-job-manager-functions.php:345
 msgid "Invalid email address."
-msgstr ""
+msgstr "Ukendt e-mail adresse"
 
 #: wp-job-manager-functions.php:353
 msgid "Your email address isn&#8217;t correct."
