--- a/languages/wp-job-manager-ru_RU.po
+++ b/languages/wp-job-manager-ru_RU.po
@@ -1,6 +1,7 @@
 # Copyright (C) 2015 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
+# Alex <alex.abook1@gmail.com>, 2015
 # Gvantsa Gvinianidze <gvantsa@gmail.com>, 2014
 # Mike Jolley <mike.jolley@me.com>, 2014
 # Nikolay Nakuginkin <translator@mondaystar.ru>, 2014
@@ -10,8 +11,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
 "POT-Creation-Date: 2015-01-24 13:48:39+00:00\n"
-"PO-Revision-Date: 2015-01-24 13:49+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2015-03-19 08:30+0000\n"
+"Last-Translator: Alex <alex.abook1@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/wp-job-manager/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "Дополнения"
 #: includes/admin/class-wp-job-manager-cpt.php:48
 #: includes/admin/class-wp-job-manager-cpt.php:49
 msgid "Approve %s"
-msgstr ""
+msgstr "Одобрено %s"
 
 #: includes/admin/class-wp-job-manager-cpt.php:51
 #: includes/admin/class-wp-job-manager-cpt.php:52
