--- a/languages/wp-job-manager-sv_SE.po
+++ b/languages/wp-job-manager-sv_SE.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
 "POT-Creation-Date: 2015-04-16 21:48:26+00:00\n"
-"PO-Revision-Date: 2015-04-16 21:48+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2015-04-21 13:36+0000\n"
+"Last-Translator: jerwre\n"
 "Language-Team: Swedish (Sweden) (http://www.transifex.com/projects/p/wp-job-manager/language/sv_SE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -303,7 +303,7 @@ msgstr "Om aktiverat, kommer icke-inloggade användare att kunna skapa ett konto
 
 #: includes/admin/class-wp-job-manager-settings.php:125
 msgid "Account Username"
-msgstr ""
+msgstr "Kontonamn"
 
 #: includes/admin/class-wp-job-manager-settings.php:126
 msgid "Automatically Generate Username from Email Address"
@@ -540,7 +540,7 @@ msgstr "Om du planerar att hantera platsannonser från administratörkontrollpan
 #: includes/admin/class-wp-job-manager-setup.php:189
 msgctxt "Default page title (wizard)"
 msgid "Jobs"
-msgstr "Jobannonser"
+msgstr "Jobbannonser"
 
 #: includes/admin/class-wp-job-manager-setup.php:190
 msgid ""
@@ -697,7 +697,7 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:84
 msgid "Featured Listing"
-msgstr ""
+msgstr "Utvald annons"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:86
 msgid ""
@@ -707,7 +707,7 @@ msgstr "Utvalda annonser kommer att vara klistrade under sökning och kan få en
 
 #: includes/admin/class-wp-job-manager-writepanels.php:90
 msgid "Listing Expiry Date"
-msgstr ""
+msgstr "Annonsens utgångsdatum"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:91
 msgid "yyyy-mm-dd"
@@ -739,7 +739,7 @@ msgstr "Lägg till fil"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:333
 msgid "Guest User"
-msgstr ""
+msgstr "Gästanvändare"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:335
 msgid "Change"
@@ -1127,7 +1127,7 @@ msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:617
 msgid "Edit listing"
-msgstr ""
+msgstr "Redigera annons"
 
 #: templates/account-signin.php:4
 msgid "Your account"
